PROJECT(easy_message_broker)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_C_FLAGS "-Wall -g -O2")
SET(CMAKE_CXX_FLAGS "-Wall -g -O2")

set(CMAKE_CXX_STANDARD 17)
FILE(GLOB_RECURSE BROKER_LIST "broker/*.cpp")
FILE(GLOB_RECURSE PUBSUB_LIST "pubsub/*.cpp")

INCLUDE_DIRECTORIES("include")

ADD_EXECUTABLE(broker  ${BROKER_LIST})
TARGET_LINK_LIBRARIES(broker pthread)

ADD_EXECUTABLE(pubsub  ${PUBSUB_LIST})
TARGET_LINK_LIBRARIES(pubsub pthread)
