PROJECT(easy_message_broker)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_C_FLAGS "-Wall -g -O2")
SET(CMAKE_CXX_FLAGS "-Wall -g -O2")

set(CMAKE_CXX_STANDARD 17)
FILE(GLOB_RECURSE BROKER_LIST "broker/*.cpp")
FILE(GLOB_RECURSE PUBSUB_LIST "pubsub/*.cpp")
FILE(GLOB_RECURSE UTIL_LIST   "util/*.cpp")

INCLUDE_DIRECTORIES("include")
INCLUDE_DIRECTORIES("util")

ADD_LIBRARY(ez_stream ${UTIL_LIST})

ADD_EXECUTABLE(broker  ${BROKER_LIST})
TARGET_LINK_LIBRARIES(broker ez_stream)

ADD_EXECUTABLE(pubsub  ${PUBSUB_LIST})
TARGET_LINK_LIBRARIES(pubsub ez_stream)
